# perceptron

./: .gitmodules  CMakeLists.txt
include/: perceptron.hxx
sources/: main.cu  perceptron.cu
